# qx

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  HANDOFF.md  README.md  bind.py  deny.toml  flake.nix  install.sh  label.py  mint.py  print_log.csv  pyproject.toml  registry.csv  registry_contract.py  rust-toolchain.toml  test_labels.py
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  playwright.yml  release.yml  rust.yml  validate.yml
conformance/: cases.json  contract.json
crates/: README.md
crates/app/: Cargo.toml
crates/app/src/: engine.rs  entity.rs  lib.rs  preset.rs  protocol.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: gate.rs  lib.rs  manifest.rs  mcp.rs  raster.rs  serve.rs  tui.rs  workspace.rs
crates/cli/tests/: bind_e2e.rs  bootstrap_e2e.rs  label_e2e.rs  label_parity_golden.rs  label_parity_python.rs  mint_e2e.rs  pr_check_contract.rs  pr_init.rs
crates/cli/tests/common/: mod.rs
crates/codec/: Cargo.toml
crates/codec/src/: canvas.rs  color.rs  format.rs  glyph_font.rs  glyphs.rs  glyphs_spleen.rs  lib.rs  payload.rs  px.rs  qr.rs  receipt.rs  repeat.rs  scan.rs  solver.rs  svg.rs  symbology.rs
crates/codec/tests/: examples_regression.rs
crates/config/: Cargo.toml  defaults.toml
crates/config/src/: lib.rs
crates/contract/: Cargo.toml
crates/contract/src/: lib.rs
crates/contract/tests/: meta_schema.rs
crates/devtools/: Cargo.toml
crates/devtools/src/: crypto_triggers.rs  main.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity_git_config/: Cargo.toml
crates/identity_git_config/src/: lib.rs
crates/identity_git_config/tests/: conformance.rs
crates/identity_github_oauth/: Cargo.toml
crates/identity_github_oauth/src/: lib.rs
crates/identity_github_oauth/tests/: conformance.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  tests.rs
crates/observability/tests/: csv_git_pipeline.rs
crates/port_tests/: Cargo.toml
crates/port_tests/src/: lib.rs
crates/port_tests/tests/: conformance.rs  soup_h1.rs  soup_h2.rs  ssot_contract.rs
crates/signing/: Cargo.toml
crates/signing_git_commit/: Cargo.toml
crates/signing_git_commit/src/: lib.rs
crates/signing_git_commit/tests/: conformance.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage_csv_git/: Cargo.toml
crates/storage_csv_git/src/: imp.rs  lib.rs
crates/storage_csv_git/tests/: conformance.rs
crates/storage_csv_git/tests/fixtures/: print_log.csv  registry.csv
crates/storage_jsonl_git/: Cargo.toml
crates/storage_jsonl_git/src/: imp.rs  lib.rs
crates/storage_jsonl_git/tests/: conformance.rs
crates/transport/: Cargo.toml
crates/transport_github_pr/: Cargo.toml
crates/transport_github_pr/src/: lib.rs
crates/transport_github_pr/tests/: conformance.rs
crates/transport_table/: Cargo.toml
crates/transport_table/src/: lib.rs
crates/transport_table/tests/: conformance.rs  parity.rs
crates/validators/: Cargo.toml
crates/validators/src/: lib.rs  personas.rs  record.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: dispatch.rs  lib.rs
decisions/: ADR-012-part-identification.md  ADR-013-parts-registry-web-app.md  ADR-014-web-app-architecture.md  ADR-015-print-event-log.md  ADR-016-pr-diff-policy-enforcement.md  ADR-017-rust-core-ports-adapters.md  ADR-018-storage-port.md  ADR-019-proposal-sink-port.md  ADR-020-identity-authorization-port.md  ADR-021-configuration-12-factor.md  ADR-022-observability-tracing-audit.md  ADR-023-threat-model-and-crypto-mvp-scope.md  ADR-024-crypto-baseline-mvp.md  ADR-025-distribution-integrity.md  ADR-027-port-conformance-tests.md  ADR-028-soup-validation.md  ADR-029-architectural-coverage-validator.md  ADR-030-multi-tier-shells-and-application-layer.md  ADR-031-label-render-print-request-model.md  ADR-032-scan-pipeline-decode-image.md  ADR-033-registry-anatomy-self-describing.md  ADR-034-registry-manifest-capabilities.md  ADR-035-part-data-model-tiered-schema-jsonl.md  ADR-036-audit-identity-personas.md  ADR-037-audit-trail-integrity-anchoring.md  ADR-038-gate-artifact-upgrades-host-independent-ci.md  ADR-039-contract-engine-canonical-form-ssot-validation-effective-dated-versioning.md  ADR-040-presets-as-declared-library-gate-enforced-floors.md  ADR-041-live-canary-sops-token-no-app.md  ADR-template.md  LOG.md  METHODOLOGY.md  NOTE-189-gate-totality-part11-gaps.md  NOTE-identity-audit-posture-0x.md  NOTE-obligations-as-anti-drift-ratchet.md  README.md  crypto-reopen-triggers.toml  obligations.toml
decisions/explorations/: m-b-data-model-sequencing.md  operations-catalog.md  platform-vs-registry.md  qms-vertical-register-a-part.md  qx-roadmap.md  qx-v1.0.0-runbook.md  remaining-obligations-roadmap.md  write-refactor-sequencing.md
design/: glyph-font.v1.json  glyph-font.v2.json
desktop/: README.md
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  operator-cheatsheet.md  quickstart.md  registry-anatomy.md  release.md
examples/: README.md
schema/: code-types.json  contract.example.json  contract.schema.json  deploy-config.json  registry-contract.json  validation-fixtures.json
schema/presets/: company-hq.contract.json  personas.contract.json
sheets/: B-2026-05-08-sheet-1-bind.csv
soup/: inventory.toml
tools/: bake_glyph_font.py  bootstrap-data-repo.sh  font_editor_gen.py  gen_spleen_glyphs.py  obligations_check.py  printer_test_62mm.py  regen-examples.sh  sheet.py
tools/data-repo-templates/: CODEOWNERS.tmpl  anchor.yml.tmpl  bundle.yml.tmpl  check.yml.tmpl  pages.yml.tmpl  protection-audit.yml.tmpl
validators/: __init__.py  __main__.py  rules.py  test_validators.py
validators/fixtures/: bad_duplicate.csv  (+12 more)
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
webapp/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+160 files in other folders)
