[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/codec",
    "crates/contract",
    "crates/validators",
    "crates/storage",
    "crates/storage_csv_git",
    "crates/storage_jsonl_git",
    "crates/app",
    "crates/identity",
    "crates/identity_git_config",
    "crates/identity_github_oauth",
    "crates/transport",
    "crates/transport_github_pr",
    "crates/transport_table",
    "crates/signing",
    "crates/signing_git_commit",
    "crates/observability",
    "crates/config",
    "crates/cli",
    "crates/devtools",
    "crates/wasm",
    "crates/port_tests",
    "desktop/src-tauri",
]

# Per ADR-017 + ADR-024: workspace pins shared dep versions so every
# crate compiles against the same minor release; Cargo.lock checked
# in for reproducible-build discipline.
[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# `regex` powers the contract `pattern` facet (ADR-039 §2). The default
# feature set is wasm32-clean (no `std::time` / threads needed for our
# match-only use), so the validator stays cross-surface.
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
figment = { version = "0.10", features = ["toml", "env"] }
# QR encoder: swapped from dormant `qrcode` 0.14 to the maintained
# `qrcode2` fork (sorairolake), pinned directly in `crates/codec`
# (ADR-017/ADR-028 swap; fixes the Micro-QR M3-L terminator).
rxing = "0.9"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["serde", "macros", "parsing", "formatting"] }
uuid = { version = "1", features = ["serde", "v7", "js"] }   # `js` is required for v7 RNG on wasm32-unknown-unknown

# Per ADR-018 §"CSV+git substrate" — first storage adapter dependencies.
csv = "1"
sha2 = "0.10"
tempfile = "3"
base64 = "0.22"

# Identity / signing MVP adapters (foundation issue #30, ADR-020 + ADR-024).
# `reqwest` uses `rustls-tls` for reproducible-build hygiene (no OpenSSL on
# the build host). Blocking client on native so synchronous trait methods
# (`IdentityProvider::current`) don't need an async runtime. Wasm32 builds
# of identity_github_oauth fall through to a stub — the FE will use the
# browser fetch API via the wasm crate boundary.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
mockito = "1"
dirs = "5"

# Per ADR-024 §Reproducible builds: deterministic release profile.
# CI release builds set RUSTFLAGS="--remap-path-prefix=$HOME=. --remap-path-prefix=$CARGO_HOME=.".
[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[patch.crates-io]
qrcode2 = { git = "https://github.com/gerchowl/qrcode-rust2", rev = "2b288f230f119e26dc8c905089c82bd1e6504503" }
