[package]
name = "part-registry-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mint"
path = "src/bin/mint.rs"

[[bin]]
name = "label"
path = "src/bin/label.rs"

[[bin]]
name = "bind"
path = "src/bin/bind.rs"

# The multicall binary per ADR-030 §2 — mint/label/bind (parity
# delegates) + the protocol subcommands over app::dispatch + `check`.
[[bin]]
name = "pr"
path = "src/bin/pr.rs"

[dependencies]
part-registry-app = { path = "../app" }
part-registry-domain = { path = "../domain" }
part-registry-config = { path = "../config" }
part-registry-observability = { path = "../observability" }
part-registry-storage = { path = "../storage" }
part-registry-storage-csv-git = { path = "../storage_csv_git" }
part-registry-identity = { path = "../identity" }
part-registry-identity-git-config = { path = "../identity_git_config" }
part-registry-transport = { path = "../transport" }
part-registry-transport-github-pr = { path = "../transport_github_pr" }
part-registry-signing = { path = "../signing" }
part-registry-signing-git-commit = { path = "../signing_git_commit" }
part-registry-codec = { path = "../codec" }
part-registry-validators = { path = "../validators" }
clap = { workspace = true }
csv = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
# CSPRNG used by `mint_part_id`. Re-uses the same `getrandom` build
# already pulled in via `uuid`; named here for crate-local discipline.
getrandom = "0.2"

# `pr serve` (ADR-030 §2) — optional so the lean CLI/CI build stays
# free of the async stack (compile-target tiering per guardrails
# CONVENTIONS / ADR-030 cargo-feature discipline).
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"], optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

[features]
default = []
serve = ["dep:axum", "dep:tokio", "dep:tower-http"]

[dev-dependencies]
tempfile = { workspace = true }
# serve router tests (compiled only with --features serve).
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Test-only: rasterise QR matrix for the decoder round-trip parity
# test. Matches the codec crate's own raster helper.
image = { version = "0.25", default-features = false, features = ["png"] }
