[package]
name = "qx-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# The single `qx` command per ADR-030 §2 — one native artifact for the
# whole shell family. `qx mint` / `qx label` / `qx bind` are the parity
# delegates (formerly standalone bins, folded in for a clean qx build);
# the protocol subcommands run over app::dispatch, plus `qx check`.
[[bin]]
name = "qx"
path = "src/bin/qx.rs"

[dependencies]
qx-app = { path = "../app" }
qx-domain = { path = "../domain" }
qx-config = { path = "../config" }
qx-observability = { path = "../observability" }
qx-storage-jsonl-git = { path = "../storage_jsonl_git" }
qx-storage = { path = "../storage" }
qx-storage-csv-git = { path = "../storage_csv_git" }
qx-identity = { path = "../identity" }
qx-identity-git-config = { path = "../identity_git_config" }
qx-transport = { path = "../transport" }
qx-transport-github-pr = { path = "../transport_github_pr" }
qx-signing = { path = "../signing" }
qx-signing-git-commit = { path = "../signing_git_commit" }
qx-codec = { path = "../codec" }
qx-validators = { path = "../validators" }
qx-contract = { path = "../contract" }
clap = { workspace = true }
csv = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# `.qx/manifest.toml` parsing (ADR-034 §3 registry policy manifest).
toml = "0.8"
time = { workspace = true }
uuid = { workspace = true }
# CSPRNG used by `mint_part_id`. Re-uses the same `getrandom` build
# already pulled in via `uuid`; named here for crate-local discipline.
getrandom = "0.2"

# `qx serve` (ADR-030 §2) — optional so the lean CLI/CI build stays
# free of the async stack (compile-target tiering per guardrails
# CONVENTIONS / ADR-030 cargo-feature discipline).
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"], optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

# `qx mcp` (ADR-030 §2) — stdio MCP server; optional like serve.
rmcp = { version = "1", features = ["transport-io", "server"], optional = true }

# `qx tui` (ADR-030 §2) — terminal shell; optional like serve/mcp.
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# In-core raster for `qx print --emit png|jpeg|pdf` (ADR-031 §8).
# Optional + default-on so the shipped `pr` rasterises without an
# external `rsvg-convert`; `--no-default-features` keeps the lean CI
# build. The wasm façade does not depend on this crate, so the FE
# bundle is untouched (foundation #33).
resvg = { version = "0.44", optional = true }
svg2pdf = { version = "0.12", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg"], optional = true }

[features]
default = ["raster"]
serve = ["dep:axum", "dep:tokio", "dep:tower-http"]
mcp = ["dep:rmcp", "dep:tokio"]
tui = ["dep:ratatui", "dep:crossterm"]
# In-core SVG -> png/jpeg/pdf for `qx print --emit` (default-on).
raster = ["dep:resvg", "dep:svg2pdf", "dep:image"]
# DEV-ONLY: `qx mint --local` writes straight to the local
# registry.csv (LocalRegistrySink), bypassing the GitHub PR flow.
# Never in `default` — must be opted in explicitly and must never
# ship in a release/main build.
dev-local = []

[dev-dependencies]
tempfile = { workspace = true }
# serve router tests (compiled only with --features serve).
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Test-only: rasterise QR matrix for the decoder round-trip parity
# test. Matches the codec crate's own raster helper.
image = { version = "0.25", default-features = false, features = ["png"] }
