[package]
name = "qx-codec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
# Receipt JSON inscribed into the SVG <metadata> element (ADR-031 §10).
serde_json = { workspace = true }
# rxing builds for wasm32 today (verified 2026-05-11 against rxing
# 0.9), so the decoder is not gated out of the wasm bundle. The
# `wasm_support` feature is enabled regardless so chrono's wasmbind
# path is selected when targeting browsers. If a future rxing version
# regresses on wasm32, gate the decoder module behind
# `#[cfg(not(target_arch = "wasm32"))]` instead of vendoring around it.
#
# Per foundation issue #33: the decoder is now feature-gated so the
# wasm-bindgen façade (`crates/wasm/`) can opt out and stay under the
# 1.5 MB gzipped bundle ceiling. Production FE keeps `zxing-wasm` for
# scanning per `web/README.md`; the Rust decoder is used by CLI +
# native tests + the A/B parity harness only.
rxing = { workspace = true, features = ["wasm_support"], optional = true }
# QR + Micro QR encoder. `qrcode2` (sorairolake fork of `qrcode`)
# replaces dormant `qrcode` 0.14 (ADR-017/ADR-028): dual MIT/Apache,
# adds Micro QR M3 + rMQR. Pinned via root [patch.crates-io] to our fork's
# Annex-J optimal-segmentation branch (issue #211) so M3-L holds every
# 14-char nano14 id (upstream's segmenter overran capacity on ~3%).
# `default-features = false` drops its svg/eps/pic/image renderers — we
# render our own SVG; only the encoder + module matrix are used.
qrcode2 = { version = "0.18.0", default-features = false, features = ["std"] }

[features]
default = ["decoder"]
# Pull rxing + the `qr::decode_qr` entry point. Disable on size-
# sensitive consumers (FE wasm bundle) — encoder + SVG renderer are
# unaffected.
decoder = ["dep:rxing"]

[dev-dependencies]
# Roundtrip tests rasterise the QR matrix directly to a PNG buffer
# (no SVG raster needed) so the rxing decoder verifies the
# encoder→matrix→decode path end-to-end. `image` is already a
# transitive dep of `rxing`, so this adds no net build cost.
image = { version = "0.25", default-features = false, features = ["png"] }
# Lightweight XML parser used by the layout tests to walk the SVG
# DOM (element counts, attribute checks).
roxmltree = "0.20"
