[package]
name = "part-registry-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
figment = { workspace = true }
# Per ADR-019 + #35 §"Where the cloned data-repo cache lives":
# resolve `local_clone_path` via XDG ($XDG_DATA_HOME on Linux,
# Application Support on macOS) when the operator hasn't set one.
dirs = { workspace = true }
