[package]
name = "qx-contract"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

# Pure parser for the canonical `contract.json` form (ADR-039 §1-3).
# SSOT for "what is a valid contract": the Rust types ARE the schema;
# schema/contract.schema.json mirrors them for editor tooling. No I/O,
# serde + serde_json + thiserror only, so the crate compiles identically
# to native (CI / qx check) and wasm32 (FE form-gen + preflight).
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
