[package]
name = "qx-identity-git-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
qx-domain = { path = "../domain" }
qx-identity = { path = "../identity" }
thiserror = { workspace = true }

[dev-dependencies]
qx-port-tests = { path = "../port_tests" }
tempfile = { workspace = true }
