[package]
name = "qx-identity-github-oauth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
qx-domain = { path = "../domain" }
qx-identity = { path = "../identity" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

# Native HTTP. `reqwest::blocking` keeps `IdentityProvider::current`
# synchronous (the trait isn't async). Rustls so we don't drag OpenSSL
# into reproducible-build hygiene per ADR-024 §"Reproducible builds".
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
qx-port-tests = { path = "../port_tests" }
tempfile = { workspace = true }
mockito = { workspace = true }
time = { workspace = true }
