[package]
name = "part-registry-observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
part-registry-config = { path = "../config" }
part-registry-domain = { path = "../domain" }
part-registry-storage = { path = "../storage" }

[dev-dependencies]
tempfile = { workspace = true }
part-registry-storage-csv-git = { path = "../storage_csv_git" }
