[package]
name = "qx-observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Per-entry `content_hash` over the canonical body (ADR-037 §1).
sha2 = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
qx-config = { path = "../config" }
qx-domain = { path = "../domain" }
qx-storage = { path = "../storage" }

[dev-dependencies]
tempfile = { workspace = true }
qx-storage-csv-git = { path = "../storage_csv_git" }
