[package]
name = "part-registry-signing-git-commit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
part-registry-domain = { path = "../domain" }
part-registry-signing = { path = "../signing" }

[dev-dependencies]
part-registry-port-tests = { path = "../port_tests" }
