[package]
name = "qx-signing-git-commit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
qx-domain = { path = "../domain" }
qx-signing = { path = "../signing" }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
qx-port-tests = { path = "../port_tests" }
tempfile = { workspace = true }
time = { workspace = true }
