[package]
name = "part-registry-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
part-registry-domain = { path = "../domain" }
serde = { workspace = true }
thiserror = { workspace = true }
