[package]
name = "qx-storage-jsonl-git"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "JSONL+git Repository adapter per ADR-035 §4 (collections/*.jsonl primary; CSV demotes to export)"

[lib]
path = "src/lib.rs"

[dependencies]
qx-domain = { path = "../domain" }
qx-storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Filesystem hashing + atomic writes are wasm32-gated in src/lib.rs.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]
qx-port-tests = { path = "../port_tests" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
uuid.workspace = true
