[package]
name = "part-registry-transport-table"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
part-registry-domain = { path = "../domain" }
part-registry-transport = { path = "../transport" }

[dev-dependencies]
part-registry-port-tests = { path = "../port_tests" }
part-registry-transport-github-pr = { path = "../transport_github_pr" }
base64 = { workspace = true }
uuid = { workspace = true }
