[package]
name = "qx-transport-table"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
qx-domain = { path = "../domain" }
qx-transport = { path = "../transport" }

[dev-dependencies]
qx-port-tests = { path = "../port_tests" }
qx-transport-github-pr = { path = "../transport_github_pr" }
base64 = { workspace = true }
uuid = { workspace = true }
