[package]
name = "qx-validators"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
qx-domain = { path = "../domain" }
qx-contract = { path = "../contract" }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
time = { workspace = true }
